[gd_scene load_steps=8 format=2]

[ext_resource path="res://activity.gd" type="Script" id=1]
[ext_resource path="res://font/SourceHanSerifTW-Medium.otf" type="DynamicFontData" id=2]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/活動資訊2.0.png-df88f3c7f5f223040704eaed757917d0.stex"

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/關閉按鈕一版.png-0877cc0f427a3e02d4fee65289d0c79e.stex"

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/稱號倉庫上一頁按鈕一版.png-add9c3aafda58f70c2aa865e91b691a4.stex"

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/稱號倉庫下一頁按鈕一版.png-f424a2d5d3bdaa84cb9b0c3567822042.stex"

[node name="activity" type="Sprite"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 169.815, 121.609 )
scale = Vector2( 0.365339, 0.365339 )
texture = SubResource( 1 )

[node name="page_01" type="Label" parent="."]
margin_left = 88.0
margin_top = 72.0
margin_right = 246.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_02" type="Label" parent="."]
visible = false
margin_left = 87.5227
margin_top = 72.0
margin_right = 250.523
margin_bottom = 193.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_03" type="Label" parent="."]
visible = false
margin_left = 88.0
margin_top = 72.0
margin_right = 250.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_04" type="Label" parent="."]
visible = false
margin_left = 87.5638
margin_top = 72.2614
margin_right = 220.564
margin_bottom = 196.261
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_picture" type="Sprite" parent="."]
position = Vector2( 267.56, 34.1569 )
scale = Vector2( 0.569524, 0.605176 )
texture = SubResource( 3 )

[node name="close" type="TextureButton" parent="."]
margin_left = 258.47
margin_top = 28.4108
margin_right = 272.47
margin_bottom = 41.4108
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last_page" type="Sprite" parent="."]

[node name="last_page_picture" type="Sprite" parent="last_page"]
position = Vector2( 242.024, 206.929 )
scale = Vector2( 0.480149, 0.465654 )
texture = SubResource( 4 )

[node name="last_page_button" type="TextureButton" parent="last_page"]
margin_left = 237.259
margin_top = 201.207
margin_right = 248.259
margin_bottom = 210.207
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_page" type="Sprite" parent="."]

[node name="next_page_picture" type="Sprite" parent="next_page"]
position = Vector2( 261.488, 204.545 )
scale = Vector2( 0.556417, 0.556417 )
texture = SubResource( 5 )
flip_v = true

[node name="next_page_button" type="TextureButton" parent="next_page"]
margin_left = 251.555
margin_top = 198.812
margin_right = 270.555
margin_bottom = 216.812
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="last_page/last_page_button" to="." method="_on_last_page_button_pressed"]
[connection signal="pressed" from="next_page/next_page_button" to="." method="_on_next_page_button_pressed"]
